[gd_scene load_steps=2 format=3 uid="uid://c3j3uuwk413hf"]

[ext_resource type="Script" path="res://Pausedscene.gd" id="1_xrhw3"]

[node name="Paused" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_xrhw3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 472.0
offset_top = 244.0
offset_right = 684.0
offset_bottom = 387.0

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="setting" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="save" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="quit_pause" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_pause" to="." method="_on_quit_pause_pressed"]
